# AI-DOM

./: CLAUDE.md  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.web.json
docs/: FEATURES.md  SAVEPOINT.md
scripts/: build-sidecar.sh
src-sidecar/: Cargo.toml  build.rs
src-sidecar/src/: main.rs  transcriber.rs  vad.rs
src/main/: claude-cli.ts  command-guard.ts  context-filter.ts  file-manager.ts  index.ts  ipc-handlers.ts  lsp-bridge.ts  model-optimizer.ts  orchestrator.ts  project-profiler.ts  sdk-event-adapter.ts  session-manager.ts  sidecar-bridge.ts  voice-engine.ts  workspace-config.ts  workspace-files.ts
src/main/providers/: model-catalog.ts  provider-manager.ts  types.ts
src/main/providers/clients/: anthropic-client.ts  google-client.ts  ollama-client.ts  openai-client.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx
src/renderer/src/assets/: main.css
src/renderer/src/components/: ActivityStream.tsx  AgentSwarm.tsx  AtomicConfirmButton.tsx  ChatPanel.tsx  CommandBar.tsx  ConversationThread.tsx  DevServerPanel.tsx  ErrorBoundary.tsx  FileChangeFeed.tsx  FileExplorer.tsx  FileViewer.tsx  GitModal.tsx  IntentHistory.tsx  LiveBrowser.tsx  LivePreview.tsx  MarkdownContent.tsx  MessageContextMenu.tsx  ModeSwitchBanner.tsx  ModelOptimizer.tsx  NeuralMap.tsx  NeuralNode.tsx  Onboarding.tsx  PlanBubble.tsx  PlanDetectionBanner.tsx  PlanMode.tsx  PlanPanel.tsx  ProfileBuilder.tsx  QuickActions.tsx  RightSidebar.tsx  SettingsPanel.tsx  Sidebar.tsx  ThinkingIndicator.tsx  UmbrellaSync.tsx  (+2 more)
(+5 files in other folders)
