[package]
name = "vibe-audio"
version = "0.1.0"
edition = "2021"
description = "Whisper.cpp sidecar for VIBΣ — fast local transcription via JSON-RPC over stdio"

[dependencies]
whisper-rs = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hound = "3.5"
symphonia = { version = "0.5", features = ["isomp4", "aac", "mp3", "ogg", "vorbis", "flac", "pcm", "adpcm"] }
symphonia-codec-opus = { package = "symphonia", version = "0.5", features = ["opt-simd"] }

[profile.release]
opt-level = 3
lto = true
strip = true
